@@ -6,6 +6,8 @@
    experimental feature.  Enable it by setting the Coin Selection
    preference to Privacy.
  * the install wizard has been rewritten and improved
+ * support minikeys as used in Casascius coins for private key import
+   and sweeping
 
 # Release 2.5.4
  * increase MIN_RELAY_TX_FEE to avoid dust transactions
